syntax = "proto3";

package flare.net;

option go_package = "github.com/flare/net;net";
option java_multiple_files = true;
option java_package = "flare.net";
//设备平台
enum Platform {
	UNKNOWN = 0;
	IOS = 1;
	ANDROID = 2;
	WINDOWS = 3;
	OSX = 4; //mac os
	WEB = 5; //网页
	MINI_WEB = 6; //迷你web
	LINUX = 7; //Linux设备
	APAD = 8; //安卓平板
	IPAD = 9; //苹果平板
}
// 消息标识符
enum Command {
	CMD_UNKNOWN = 0;
	// 系统命令 (1-9)
	PING = 1; // ping
	PONG = 2; // pong
	LOGIN = 3; // 登录
	LOGIN_OUT = 4; // 退出登录
	SET_BACKGROUND = 5; // 设置后台运行
	SET_LANGUAGE = 6; // 语言设置
	KICK_ONLINE = 7; // 强制用户下线
	CLOSE = 8; // 链接关闭

	// 客户端命令 (10-29)
	CLIENT_SEND_MESSAGE = 10; // 客户端发送消息
	CLIENT_PULL_MESSAGE = 11; // 客户端拉取消息
	CLIENT_REQUEST = 12; // 客户端发送请求
	CLIENT_ACK = 13; // 客户端确认接收

	// 服务端命令 (30-49)
	SERVER_PUSH_MSG = 30; // 服务端推送消息
	SERVER_PUSH_CUSTOM = 31; // 服务端推送自定义消息
	SERVER_PUSH_NOTICE = 32; // 服务端推送通知
	SERVER_PUSH_DATA = 33; // 服务端推送数据
	SERVER_ACK = 34; // 服务端确认接收
	SERVER_RESPONSE = 35; // 服务端响应
}
// 消息响应码
enum ResCode {
	SUCCESS = 0; // 成功
	UNKNOWN_CODE = 1; // 未知错误
	CONNECTION_CLOSED = 2; // 连接关闭
	CONNECTION_NOT_FOUND = 3; // 连接不存在
	DECODE_ERROR = 4; // 解码错误
	ENCODE_ERROR = 5; // 编码错误
	WEBSOCKET_ERROR = 6; // WebSocket错误
	INVALID_MESSAGE_TYPE = 7; // 无效消息类型
	BUSINESS_ERROR = 8; // 业务错误
	PROTOCOL_ERROR = 9; // 协议错误
	AUTH_ERROR = 10; // 认证错误
	NOT_FOUND_HANDLER = 11; // 未找到处理器
	PUSH_TO_CLIENT_ERROR = 12; // 推送客户端错误
	SEND_MESSAGE_ERROR = 13; // 发送消息错误
	INVALID_PARAMS = 14; // 无效参数
	INVALID_COMMAND = 15; // 无效命令
	UNAUTHORIZED = 16; // 未授权
	INTERNAL_ERROR = 17; // 内部错误
	INVALID_STATE = 18; // 无效状态
	TIMEOUT = 19; // 超时
	RESOURCE_ERROR = 20; // 资源错误
	CONNECTION_ERROR = 21; // 连接错误
	ARGS_ERROR = 22; // 参数错误
}

// 请求消息
message Message {
	Command command = 1; //命令
	bytes data = 2; //消息体
	string client_id = 3; //客户端消息id
}

// 响应消息
message Response {
	int32 code = 1;
	string message = 2;
	bytes data = 3;
}

// 登录请求
message LoginReq {
	string user_id = 1; //用户id
	Platform platform = 2; //平台
	string client_id = 3; //客户端id
	string token = 4; //token
}
// 登录响应
message LoginResp {
	string user_id = 1; //用户id
	string language = 2; //语言
}
